[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/flatDark34.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/flatDark15.png" type="Texture" id=2]
[ext_resource path="res://assets/font/Kenney Blocks.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/title_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[node name="title_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="main_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="title" type="Label" parent="main_container"]
margin_top = 121.0
margin_right = 180.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Doodle Jump"
align = 1

[node name="menu" type="HBoxContainer" parent="main_container"]
margin_top = 149.0
margin_right = 180.0
margin_bottom = 179.0
alignment = 1

[node name="exit" type="Button" parent="main_container/menu"]
margin_left = 58.0
margin_right = 88.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="start" type="Button" parent="main_container/menu"]
margin_left = 92.0
margin_right = 122.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="highscore" type="Label" parent="main_container"]
margin_top = 183.0
margin_right = 180.0
margin_bottom = 199.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Highscore"
align = 1

[connection signal="pressed" from="main_container/menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="main_container/menu/start" to="." method="_on_start_pressed"]
